Update coursera practical machine learning project.Rmd

--- a/coursera practical machine learning project.Rmd
+++ b/coursera practical machine learning project.Rmd
@@ -101,7 +101,7 @@ cm_gbm
 
 ```
 
-```{r generalized boosted regression, echo=FALSE}
+```{r generalized boosted regression graph, echo=FALSE}
 plot(gbm_model)
 ```
 
